Bug 1197977: [webm]. Ensure resource length calculation never underflows. r=kinetik